# axon-pack

./: .gitignore  Cargo.toml  README.md  pyproject.toml
docs/: packing.md
python/axon_pack/: cli.py  sources.py
src/: lib.rs  main.rs
tests/: test_pack.py
