[package]
name = "axon-pack-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "axon_pack_rs"
path = "src/lib.rs"

[[bin]]
name = "axon-pack-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3.15"

